--- a/master.css
+++ b/master.css
@@ -17,7 +17,8 @@ body {
     justify-content: space-evenly;
 }
 #root img {
-    width: 400px
+    width: 400px;
+    border-radius: 8px;
 }
 #root h1 {
     color: #fff;
